overlaping component resolved

--- a/chatapplicationclient/src/components/chatWindow/chatWindowStyles.css
+++ b/chatapplicationclient/src/components/chatWindow/chatWindowStyles.css
@@ -1,4 +1,9 @@
 
+.mainChatWindow {
+    position: relative;
+    height: 100%;
+}
+
 .chatWindowHeader {
     height: 8vh;
     width: 97%; 
@@ -30,7 +35,7 @@
 
 #chatList {
     flex: 1;
-    height: 74vh;
+    height: 72vh;
     margin-right: 20px;
     overflow-y: auto;
     display: flex;
@@ -117,6 +122,7 @@ div.file {
     right: 0px;
     opacity: 0.8;
 }
+
 .timeImage {
     text-align: right;
     position: absolute;
@@ -128,9 +134,7 @@ div.file {
 }
 
 .timeContentImage {
-    font-weight: 500;
-    font-size: 100%;
-    font-family: Brush Script MT,cursive;
+    font-size: 10px;
 }
 
 .downloadBtnImage {
@@ -181,11 +185,12 @@ div.file {
     margin-left: 2px;
     width: 100%;
     position: absolute;
-    bottom: 13px;
+    bottom: 19px;
     border-top: 2px solid #2e2c2c;
 }
 
 .file {
+    width: 3%;
     margin-left: 5%;
     margin-right: 10px;
 }
@@ -200,6 +205,7 @@ div.file {
 }
 
 .inputForm {
+    background-color: white;
     display: inline-block;
     width: 90%;
 }
